deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
  annotations:
    cert-manager.io/cluster-issuer: ${ACME_ISSUER}
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - blog.${PUBLIC_DOMAIN}
      secretName: blog-tls
  rules:
    - host: blog.${PUBLIC_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog
                port:
                  number: 80
